Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74919

qquickcombobox.cpp:187:13: error: ‘QString QQuickComboBoxDelegateModel::stringValue(int, const QString&)’ marked ‘override’, but does not override

    XMLWordPrintable

Details

    • 6c787542df32c59fe0299b2ad884968de28dbcba 291b95d201dc204db5f1a44cd2a03b30f116b032

    Description

      https://codereview.qt-project.org/#/c/254879/ in qtquickcontrols2.git requires https://codereview.qt-project.org/#/c/254888/ in qtdeclarative.git. https://codereview.qt-project.org/#/c/254888/ has to be merged first, but in doing so it broke the build:

      qquickcombobox.cpp:187:13: error: ‘QString QQuickComboBoxDelegateModel::stringValue(int, const QString&)’ marked ‘override’, but does not override
      

      We need to remove the override so it compiles, then temporarily skip any failing ComboBox tests that result from the function not being called.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes